First full code upload

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,160 @@
-/* You can add global styles to this file, and also import other style files */
+/* General */
+
+.omc__hidden__content {
+    display: none;
+}
+
+
+/* Navbar */
+
+.omc__navbar__username {
+    color: #fff;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+    margin-right: 2rem;
+}
+
+
+/* Login */
+
+.omc__login__wrapper {
+    position: relative;
+    left: 25%;
+    width: 50%;
+}
+
+.omc__login__input {
+    border-radius: 25px;
+    text-align: center;
+}
+
+.omc__login__input::placeholder {
+    text-align: center;
+}
+
+.omc__login__button {
+    border-radius: 25px;
+    width: 100%;
+}
+
+
+/* New register */
+
+.omc__new__register__form__wrapper {
+    position: relative;
+    left: 25%;
+    width: 50%;
+}
+
+.omc__new__register__form__uid__input {
+    border-radius: 25px;
+}
+
+.omc__new__register__form__textarea {
+    border-radius: 5px;
+}
+
+.omc__new__register__form__select__input {
+    border-radius: 25px;
+    margin-left: -1.5rem;
+    width: 104%;
+}
+
+.omc__new__register__form__submit {
+    border-radius: 25px;
+    width: 100%;
+}
+
+
+/* Edit register */
+
+.omc__edit__register__form__wrapper {
+    position: relative;
+    left: 25%;
+    width: 50%;
+}
+
+.omc__edit__register__form__uid__input {
+    border-radius: 25px;
+}
+
+.omc__edit__register__form__textarea {
+    border-radius: 5px;
+}
+
+.omc__edit__register__form__select__input {
+    border-radius: 25px;
+    margin-left: -1.5rem;
+    width: 104%;
+}
+
+
+/* Registers page */
+
+.omc__table__filters__title {
+    border-color: rgba(0, 0, 0, 0.3);
+    border-width: 0 0 2px;
+    margin-left: 1rem;
+    outline: 0;
+    width: 50rem;
+}
+
+.omc__table__filters__title:focus {
+    border-color: #ADC7EA;
+}
+
+.omc__table__filters__title:focus::placeholder {
+    color: transparent;
+}
+
+.omc__table__scrollable {
+    height: 40rem;
+}
+
+.omc__table__scrollable::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+.omc__table__scrollable::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.omc__table__scrollable::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
+}
+
+​ .omc__table__register {
+    vertical-align: middle;
+}
+
+
+/* Documentation */
+
+.myDocCard {
+    border: none;
+    height: 800px;
+    overflow-y: scroll;
+}
+
+
+/* Custom Bootsrap component mods */
+
+.form-select__custom {
+    margin-left: 2rem;
+    width: 15rem;
+}
+
+.button__custom--create {
+    margin-left: 1rem;
+    width: 10rem;
+}
+
+.button__custom--delete {
+    margin-left: 1rem;
+    width: 10rem;
+}
