--- a/src/app/pages/documentation/documentation.component.html
+++ b/src/app/pages/documentation/documentation.component.html
@@ -13,7 +13,7 @@
             </nav>
         </div>
         <div class="col">
-            <div class="card myDocCard">
+            <div class="card omc__myDocCard">
                 <div class="card-body" data-bs-target="#navbar-scrollspy">
                     <div class="row" id="presentation">
                         <h2>Aptitude test for OhMyCode</h2>
