--- a/src/styles.css
+++ b/src/styles.css
@@ -135,10 +135,27 @@
 
 /* Documentation */
 
-.myDocCard {
+.omc__myDocCard {
     border: none;
     height: 800px;
     overflow-y: scroll;
+}
+
+.omc__myDocCard::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+.omc__myDocCard::-webkit-scrollbar {
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.omc__myDocCard::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
 }
 
 
