--- a/src/app/pages/documentation/documentation.component.html
+++ b/src/app/pages/documentation/documentation.component.html
@@ -41,11 +41,11 @@
                     <div class="row" id="deploy">
                         <h2>Project deploy: </h2>
                         <ol class="list-group list-group-flush mt-3">
-                            <li class="list-group-item"><a href="https://guadaltech-front-test.netlify.app/index" target="_blank">Project deploy website</a></li>
+                            <li class="list-group-item"><a href="https://omc-test.netlify.app/login" target="_blank">Project deploy website</a></li>
                         </ol>
                     </div>
                     <div class="row" id="urls">
-                        <h2>Rutas del back-end: </h2>
+                        <h2>Backend paths: </h2>
                         <ol class="list-group list-group-flush mt-3">
                             <li class="list-group-item list-group-item-success"><span class="badge badge-success">GET:</span> https://ohmycode-test-brian.herokuapp.com/api/todos</li>
                             <li class="list-group-item list-group-item-primary"><span class="badge badge-primary">POST:</span> https://ohmycode-test-brian.herokuapp.com/api/todos/new</li>
@@ -54,10 +54,10 @@
                         </ol>
                     </div>
                     <div class="row mt-3" id="code" name="code">
-                        <h2>Dónde encontrar el código fuente: </h2>
+                        <h2>Where to find the code: </h2>
                         <ol class="list-group list-group-flush mt-3">
-                            <li class="list-group-item"><a href="https://github.com/thecodeb/guadaltech-front-end-test" target="_blank">Front-end´s GitHub repository</a></li>
-                            <li class="list-group-item"><a href="https://github.com/thecodeb/guadaltech-back-end-test" target="_blank">Back-end´s GitHub repository</a></li>
+                            <li class="list-group-item"><a href="https://github.com/thecodeb/OhMyCode-test-front" target="_blank">Front-end´s GitHub repository</a></li>
+                            <li class="list-group-item"><a href="https://github.com/thecodeb/OhMyCode-test-back" target="_blank">Back-end´s GitHub repository</a></li>
                         </ol>
                     </div>
                 </div>
